# tradekit

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  HANDOFF-2026-07-14-interview-workbench.md  README.md  cc-dev-log.md  config.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN.md  FRICTION.md  OPERATIONS.md  ROADMAP.md  SCOPE.md
docs/design/: BRIDGE-UIA.md  HUD-ACK.md  HUD-ORDERBOOK.md  MTF-SCAN.md  STRATEGY-BACKLOG.md  STRATEGY-PACK.md  STRATEGY-PROCEDURE.md
docs/handoff/: CODEX-HANDOFF-2026-07-17.md  CODEX-HANDOFF-CURRENT.md  HANDOFF-2026-07-19-prop-pivot.md  HANDOFF-2026-07-20-bridge-read.md  HANDOFF-2026-07-20-hud-commit.md  HANDOFF-2026-07-20-ops-ready.md  HANDOFF-2026-07-23-fable-return-s1-silence.md  HANDOFF-PRIMER.md  RESCOPE-2026-07-19.md  SESSION-SEED-P1B.md  SESSION-SEED-P1C.md  SESSION-SEED-P2.md  SESSION-SEED-P3.md  SESSION-SEED-P4.md  SPRINT-P1A-data-layer.md  SPRINT-P1B-indicators.md  SPRINT-P1C-regime-scanner-sizing.md  SPRINT-P2-thesis-policy.md  SPRINT-P3-P4-paper-to-live.md  SPRINT-P5-PROP.md
docs/hud/: hud.html
docs/primers/: P1B-indicators-primer.md  P1C-regime-sizing-primer.md  P2-thesis-policy-primer.md  P3-paper-trading-primer.md
docs/research/: Market Analysis Engine — Comprehensive Design Document.md  alpaca-paper-shapes-2026-07-18.json  codex-brief.md  composio-spike.md  gemini-adversarial-review.md  paxg-basis-probe-2026-07-19.md  perplexity-SME.md  prop-questionnaire-answers-CTO-2026-07-18.md  uia-probe-kraken-2026-07-19.json
docs/research/deep-research-reports/: Evidence Review of Intraday Crypto Strategy Families — Report 3.md  Intraday Crypto Market Microstructure — Report 2.md  Kraken Props Operational and API Specification — Report 1.md  Machine Learning Applications in Trading — Report 7.md  Operational Reliability and Infrastructure Resilience — Report 8.md  Quantitative Trading Math Primer for AI Agent System Design.md  Regime Detection for Intraday Crypto — Report 6.md  Risk of Ruin and Prop-Account Optimization — Report 5.md  Time-Series Research and Backtesting Standards — Report 4.md
docs/reviews/: agent-metrics.md  test-audit-2026-07-18.md
docs/schemas/: AssetRef.json  Bar.json  BarSeries.json  ChainReport.json  CriteriaOutcome.json  EVBlock.json  EntrySpec.json  Event.json  EventFilter.json  Fill.json  Friction.json  Grade.json  MarketSnapshot.json  MeasurableInvalidation.json  OrderAck.json  OrderRequest.json  PriceClose.json  PriceTouch.json  ProposedAction.json  RuleHit.json  RunManifest.json  StrategyMetrics.json  StructuralInvalidation.json  ThesisContract.json  TimeExpiry.json  TradeRecord.json  Verdict.json  VerdictToken.json
docs/specs/: SPEC-bridge-read.md  SPEC-hud-ack.md  SPEC-hud-orderbook.md  TASKS-bridge-read.md  TASKS-hud-orderbook.md
experiments/candlerl/: .gitignore  HANDOFF.md  README.md  pyproject.toml
experiments/candlerl/src/candlerl/: __init__.py  _bridge.py  _data.py  _dataset.py  _env.py  _evaluate.py  _features.py  _patterns.py  _predict.py  _render.py  _rl.py  _vision.py  cli.py
experiments/candlerl/tests/: test_dataset.py  test_env.py  test_features.py  test_patterns.py  test_render.py
experiments/paxg-basis/: probe_daily_basis.py
prompts/: rubric-thesis-v1.md
rules/: RULES.md
scripts/: collect_ticks.py  dev-notes-p2d-derivation.py  probe_uia_kraken.py  rehearse_hud_ack.py  smoke_alpaca_paper.py  smoke_data.py  smoke_kraken_probe.py  smoke_scan.py
src/tradekit/: __init__.py  costs.py  strategies.py
src/tradekit/bridge/: __init__.py  _elementmap.py  _errors.py  _parse.py  _pywinauto.py  _read.py  _session.py
src/tradekit/broker/: __init__.py  _alpaca.py  _manual.py  _paper.py  _pipeline.py  _port.py  _tokens.py
src/tradekit/cli/: __init__.py  main.py
src/tradekit/contracts/: __init__.py  _base.py  _bridge.py  _event_payloads.py  _events.py  _execution.py  _hud.py  _marketdata.py  _metrics.py  _predicates.py  _prop.py  _quantize.py  _review.py  _schemas.py  _thesis.py
src/tradekit/hud/: __init__.py  _build.py  _render.py  _serve.py
src/tradekit/ledger/: __init__.py  _db.py  _hash.py  _models.py  _projections.py
src/tradekit/mae/: __init__.py  _correlation.py  _metrics.py  _regime.py  _runtime.py  _scanner.py  _sizing.py
src/tradekit/memory/: __init__.py  _brief.py  _search.py  _wiki.py
src/tradekit/policy/: __init__.py  _context.py  _dials.py  _evaluate.py  _rules.py  _rules_md.py  _series.py
src/tradekit/prop/: __init__.py  _sim.py
src/tradekit/report/: __init__.py
src/tradekit/review/: __init__.py  _adapters.py  _artifacts.py  _port.py  _rubric.py
src/tradekit/thesis/: __init__.py  _grade_wiring.py  _grading.py  _machine.py  _submit.py
tests/: ASSUMPTIONS.md  conftest.py
tests/contract/: test_broker_port.py  test_marketdata_port.py
tests/golden/indicators/: adx.json  atr.json  bollinger.json  constant_price.json  ema.json  keltner.json  macd.json  obv.json  qfl_bases.json  roc.json  rsi.json  short_series.json  single_bar.json  sma.json  stoch_rsi.json  supertrend.json  swing_points.json  true_range.json  true_range_gap.json  volume_ratio.json  vwap.json
tests/replay/: test_p0_replay.py  test_p2_adversarial.py  test_p3_end_to_end.py  test_p4_seams.py
tests/unit/: test_costs.py  test_strategies_registry.py
tests/unit/bridge/: conftest.py  test_bridge_contracts.py  test_elementmap.py  test_import_guard.py  test_parse.py  test_probe_artifact.py  test_read_verbs.py
tests/unit/broker/: test_alpaca_broker.py  test_broker_stubs.py  test_create_paper_account.py  test_manual.py  test_paper_account_state.py  test_paper_fills.py  test_pipeline.py  test_reconcile.py
tests/unit/cli/: test_cli.py  test_cli_account.py  test_cli_bridge.py  test_cli_fill.py  test_cli_grade_sweep.py  test_cli_memory_report.py  test_cli_order.py  test_cli_policy.py
tests/unit/collector/: test_collect_ticks.py
tests/unit/contracts/: test_broker_accounts.py  test_event_payloads.py  test_events.py  test_hud_ack_contracts.py  test_hud_contracts.py  test_predicates.py  test_quantize.py  test_thesis_contract.py
tests/unit/hud/: test_build_state.py  (+5 more)
(+69 files in other folders)
