[project]
name = "tradekit"
version = "0.1.0"
description = "Agentic trading framework — deterministic core, thin LLM shell (DESIGN.md TD-1)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "python-ulid>=2.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
tk = "tradekit.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tradekit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "TID", "RUF"]

# Deep-module enforcement (DESIGN §1 consequence 1): underscore-internals of one
# module may never be imported by another. Entries accrue as internals appear.
[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["tradekit"]
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

# Strict where money and state live (DESIGN §3): contracts, ledger, policy, thesis.
[[tool.mypy.overrides]]
module = "tradekit.contracts.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "tradekit.ledger.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true
warn_return_any = true
