[project]
name = "tradekit"
version = "0.1.0"
description = "Agentic trading framework — deterministic core, thin LLM shell (DESIGN.md TD-1)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "python-ulid>=2.7",
    "httpx>=0.28.1",
    "tenacity>=9.1.4",
    "numpy>=2.5.1",
    "yfinance>=1.5.1",
    "hmmlearn>=0.3.3",
    "pydantic-settings>=2.14.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "respx>=0.23.1",
]

[project.scripts]
tk = "tradekit.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tradekit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "TID", "RUF"]

# Deep-module enforcement (DESIGN §1 consequence 1): underscore-internals of one
# module may never be imported by another. TID251 bans each internal module
# globally; per-file-ignores below re-allow a module's OWN internals. Known gap
# (accepted, reviewer D5): inside an ignored dir, imports of ANOTHER module's
# internals also escape TID251 — revisit with import-linter when module count
# grows. Entries accrue as internals appear.
[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"tradekit.contracts._base".msg = "contracts internals are private (DESIGN §1); import from tradekit.contracts"
"tradekit.contracts._events".msg = "contracts internals are private (DESIGN §1); import from tradekit.contracts"
"tradekit.contracts._execution".msg = "contracts internals are private (DESIGN §1); import from tradekit.contracts"
"tradekit.contracts._predicates".msg = "contracts internals are private (DESIGN §1); import from tradekit.contracts"
"tradekit.contracts._quantize".msg = "contracts internals are private (DESIGN §1); import from tradekit.contracts"
"tradekit.contracts._schemas".msg = "contracts internals are private (DESIGN §1); import from tradekit.contracts"
"tradekit.contracts._thesis".msg = "contracts internals are private (DESIGN §1); import from tradekit.contracts"
"tradekit.mae._metrics".msg = "mae internals are private (DESIGN §1); import from tradekit.mae"
"tradekit.ledger._db".msg = "ledger internals are private (DESIGN §1); import from tradekit.ledger"
"tradekit.ledger._hash".msg = "ledger internals are private (DESIGN §1); import from tradekit.ledger"
"tradekit.ledger._projections".msg = "ledger internals are private (DESIGN §1); import from tradekit.ledger"

[tool.ruff.lint.per-file-ignores]
"src/tradekit/contracts/**" = ["TID251"]
"src/tradekit/ledger/**" = ["TID251"]
"src/tradekit/mae/**" = ["TID251"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["tradekit"]
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

# Strict where money and state live (DESIGN §3): contracts, ledger, policy, thesis.
[[tool.mypy.overrides]]
# yfinance ships no py.typed marker / stubs (P1C batch A, mae/_data/macro.py's
# lazy import) — untyped-import noise only, not a house-style exception.
module = ["yfinance", "yfinance.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# hmmlearn ships no py.typed marker / stubs (P1C batch B, mae/_regime.py's
# lazy import in `_fit_hmm`) — untyped-import noise only, not a house-style
# exception (same pattern as yfinance above).
module = ["hmmlearn", "hmmlearn.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "tradekit.contracts.*",
    "tradekit.ledger.*",
    "tradekit.thesis.*",
    "tradekit.policy.*",
    "tradekit.broker.*",
    "tradekit.review.*",
    "tradekit.memory.*",
    "tradekit.report.*",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_any_generics = true
check_untyped_defs = true
strict_equality = true
warn_return_any = true
